# gaunt

./: CMakeLists.txt  README.md  gaunt  gaunt.cpp  pre-test.sh  run_test.sh
build.clang/: CMakeCache.txt  Makefile  cmake_install.cmake  gaunt
debug/: gaunt.mod  include_test.cpp
include/: gaunt_all.h  gaunt_get.h  gaunt_include.h  gaunt_parser.h  gaunt_sync.h  gaunt_tidy.h
